@@ -1,0 +1,87 @@
+FreeBSD/386/lib
+Hp
+Hp/s800
+Hp/s800/bin
+Hp/s800/include
+Hp/s800/lib
+Inferno/386/bin
+Inferno/arm/bin
+Inferno/mips/bin
+Inferno/mips/lib
+Inferno/power/bin
+Inferno/power/lib
+Inferno/sparc/bin
+Inferno/sparc/lib
+Inferno/thumb/bin
+Inferno/thumb/lib
+Irix/mips/lib
+Linux/386/lib
+Linux/arm/bin
+Linux/arm/lib
+MacOSX/386/lib
+MacOSX/power/lib
+NetBSD/386/lib
+Nt/386/lib
+OpenBSD/386/bin
+OpenBSD/386/lib
+OpenBSD/arm/bin
+OpenBSD/arm/lib
+Plan9/386/lib
+Plan9/mips/bin
+Plan9/mips/lib
+Plan9/power/bin
+Plan9/power/lib
+Plan9/sparc/bin
+Plan9/sparc/lib
+Solaris/sparc/lib
+keydb/countersigned
+keydb/countersigned
+keydb/signed
+keydb/signed
+mail
+man/lib/man
+man/lib/permind
+mnt
+mnt/9win
+mnt/acme
+mnt/arch
+mnt/diary
+mnt/factotum
+mnt/gossip
+mnt/icontact
+mnt/ilog
+mnt/incall
+mnt/isubs
+mnt/itrack
+mnt/keys
+mnt/keysrv
+mnt/quiz
+mnt/registry
+mnt/rstyxreg
+mnt/schedule
+mnt/vmail
+mnt/wm
+mnt/wrap
+mnt/wsys
+n
+n/cd
+n/client
+n/client/chan
+n/client/dev
+n/disk
+n/dist
+n/dump
+n/ftp
+n/gridfs
+n/kfs
+n/local
+n/rdbg
+n/registry
+n/remote
+services/logs
+services/ppp
+src
+tmp
+usr/inferno/charon
+usr/inferno/keyring
+usr/inferno/tmp
